# aws-cognito-apigateway-sam

./: pyproject.toml  template.yaml
cognito_serverless_platform/src/: categories.py  users.py
